SERVER-17241 Verify number of loops of polygon

(cherry picked from commit 76e7106f2577d9911bc6694bab0d1166b58cd977)