jstests/core/geo_validate.js
@@ -86,3 +86,8 @@ assert.commandFailed(db.runCommand({geoNear: coll.getName(),
 // NaN is interpreted as limit 0
 assert.commandWorked(db.runCommand({geoNear: coll.getName(),
                                     near: [0,0], spherical: true, num: NaN}));
+
+
+//
+// SERVER-17241 Polygon has no loop
+assert.writeError(coll.insert({ geo : { type: 'Polygon', coordinates: [] } }));
